Magnify Changelog

V1.1.0
• Added Upgrade Aquatic Support
• Changed Arts & Crafts Creative Category Icon
• Changed Jolly Boxes Creative Category Icon
• Added Sully's Mod Support
• Added Boatload Support


V1.0.0
• Added Arts & Crafts Support
• Added Caffeinated Support
• Added Clayworks Support
• Added Comforts Support
• Added Jolly Boxes Support
• Added Dustrial Decor Support