@@ -7,5 +7,6 @@
   "magnify.dustrial_decor_tab": "'Dustrial Decor",
   "magnify.upgrade_aquatic_tab": "Upgrade Aquatic",
   "magnify.sullys_mod_tab": "Sully's Mod",
-  "magnify.boatload_tab": "Boatload"
+  "magnify.boatload_tab": "Boatload",
+  "magnify.buzzier_bees_tab": "Buzzier Bees"
 }
